# denali

./: .gitignore  Cargo.toml  README.md
old/commands/: init.rs  load.rs  mod.rs  save.rs
src/: commands.rs  main.rs
src/commands/: add.rs  checkout.rs  mod.rs
src/functions/: check.rs  clean.rs  copy.rs  init.rs  list.rs  load.rs  mod.rs  remove.rs  save.rs
src/objects/: mod.rs  save_object.rs  tree.rs
src/remote/: add.rs  helpers.rs  manifest.rs  mod.rs  pack_types.rs  receive.rs  remove.rs  send.rs  sync.rs
src/templates/: apply.rs  list.rs  mod.rs  new.rs  remove.rs
src/utils/: config.rs  context.rs  errors.rs  file_type.rs  manifests.rs  mod.rs  parse_name.rs  root_dir.rs
