[package]
name = "denali"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
flate2 = { version = "1.1.5", features = ["zlib"] }
globset = "0.4.18"
hex = "0.4.3"
humantime = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
thiserror = "2.0.17"
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4"] }
zstd = "0.13.3"

